<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="130dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_comment_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dummy_comment_properties"
            android:textSize="@dimen/normal_size"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tv_comment_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_comment_content"
            android:textSize="@dimen/small_size"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent" />

        <TextView
            android:id="@+id/tv_view_replies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/comment_view_replies"
            android:textSize="@dimen/small_size"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent" />

    </LinearLayout>

</android.support.v7.widget.CardView>