<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="130dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/dummy_story_title"
            android:textSize="@dimen/normal_size"
            android:textColor="@color/colorBlack"
            android:gravity="center_vertical"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_title"
            android:layout_marginTop="5dp">
            <TextView
            android:id="@+id/tv_properties"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/dummy_story_properties"
            android:textSize="@dimen/small_size"
            android:background="@android:color/transparent" />

            <TextView
                android:id="@+id/tv_comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/dummy_story_comments"
                android:textSize="@dimen/small_size"
                android:background="@android:color/transparent" />
        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>